GNOME Bugzilla – Bug 700886
curlsmtpsink: terminate transfer thread properly
Last modified: 2013-05-25 13:05:00 UTC
Created attachment 245125 [details] [review] terminate transfer thread properly Handle the case when no EOS has been sent: the curl readfunc callback will return ABORT.
Thanks for the patch, pushed: commit 8303561bd97114b4f8e58987bab5f3903858ac2f Author: Patricia Muscalu <patricia@axis.com> Date: Thu May 23 14:32:07 2013 +0200 curlsmtpsink: terminate transfer thread properly If no EOS has been sent, the curl readfunc callback will return ABORT. The media file in that case will not be properly finalized. https://bugzilla.gnome.org/show_bug.cgi?id=700886 completely unrelated: https://twitter.com/girayozil/status/306836785739210752 ;)
Thank you. Yeah, ;) true true ...